<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primary"
    tools:context=".PaymentOptions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:paddingVertical="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_payment_method"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/material_dynamic_secondary30"
            android:textSize="22sp"/>

        <RadioGroup
            android:layout_marginVertical="30dp"
            android:id="@+id/payment_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/payment_cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash"/>

            <RadioButton
                android:id="@+id/payment_debit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debit"/>

            <RadioButton
                android:id="@+id/payment_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit"/>
        </RadioGroup>

        <Button
            android:id="@+id/payment_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/primary"
            android:text="@string/Continue" />
    </LinearLayout>
</LinearLayout>